# kohvilogi

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: docker.yml  tests.yml
app/: database.py  main.py
templates/: index.html  stats.html  world.html
tests/: test_app.py
