[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kohvilogi"
version = "0.2.0"
description = "Expense tracker web app - FastAPI + SQLite + Tailwind"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
